Properly fixing the layout so that the height doesn't break the max height of the html

--- a/src/components/ProductGallery/ProductGallery.module.scss
+++ b/src/components/ProductGallery/ProductGallery.module.scss
@@ -11,10 +11,11 @@
         margin-left: 48px;
         margin-right: 125px;
 
+        max-width: 30%;
+
         // Selecting child
         &__highlighted {
-            min-height: 445px;
-            min-width: 445px;
+            flex-basis: 445px;
         }
         &__thumbnails {
             // Flex
@@ -22,9 +23,9 @@
             column-gap: 31px;
             // Spacing
             margin-top: 32px;
+
             &__listItem > img {
-                min-height: 88px;
-                min-width: 88px;
+                flex-basis: 88px;
             }
         }
         // Applying to all images in the component
